add_subdirectory(Core)
add_subdirectory(Hardware)
add_subdirectory(Math)
add_subdirectory(Network)
add_subdirectory(Render)
add_subdirectory(Utility)
add_subdirectory(Window)

add_custom_target(bull-test)
add_dependencies(bull-test bull-test-core)
add_dependencies(bull-test bull-test-hardware)
add_dependencies(bull-test bull-test-math)
add_dependencies(bull-test bull-test-network)
add_dependencies(bull-test bull-test-render)
add_dependencies(bull-test bull-test-utility)
add_dependencies(bull-test bull-test-window)