add_subdirectory(FileSystem)
add_subdirectory(Functor)
add_subdirectory(IO)
add_subdirectory(Log)
add_subdirectory(Memory)
add_subdirectory(Pattern)
add_subdirectory(System)
add_subdirectory(Thread)
add_subdirectory(Time)

add_custom_target(bull-test-core)
add_dependencies(bull-test-core bull-test-core-filesystem)
add_dependencies(bull-test-core bull-test-core-functor)
add_dependencies(bull-test-core bull-test-core-io)
add_dependencies(bull-test-core bull-test-core-log)
add_dependencies(bull-test-core bull-test-core-memory)
add_dependencies(bull-test-core bull-test-core-pattern)
add_dependencies(bull-test-core bull-test-core-system)
add_dependencies(bull-test-core bull-test-core-thread)
add_dependencies(bull-test-core bull-test-core-time)
