add_subdirectory(Context)
add_subdirectory(Shader)
add_subdirectory(Target)
add_subdirectory(Texture)

add_custom_target(bull-test-render)
add_dependencies(bull-test-render bull-test-render-context)
add_dependencies(bull-test-render bull-test-render-shader)
add_dependencies(bull-test-render bull-test-render-target)
add_dependencies(bull-test-render bull-test-render-texture)